deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bocr-svc
  name: bocr-svc
  namespace: nebo
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
  selector:
    app: bocr-dep
